# fans

./: .gitignore  README.md  TODO.md  fans.template.cfg
dependency-inferer/: infer_dependency.py  infer_dependency.sh  readme.md
fuzzer-engine/: debug_fuzzer.sh  readme.md  setup.template.sh  test_fuzzer.template.sh
fuzzer-engine/fuzzer/: Android.bp  version-script.txt
fuzzer-engine/fuzzer/misc/: audio_effects.xml  codec.py  extract_audio_effects.py
fuzzer-engine/fuzzer/src/: constraint_checker.cpp  dependency_solver.cpp  executor.cpp  generator.cpp  main.cpp  parcel_reader.cpp  parcel_reader_writer.cpp  parcel_writer.cpp  service.cpp  (+1 more)
fuzzer-engine/manager/: flash.py  flash.template.cfg  fuzzer.template.cfg  get_device_list.py  manager.py  readme.md  restart_adbd.sh  restart_device.sh  util.py
interface-model-extractor/: readme.md
interface-model-extractor/post-process/: adjust_structure.py  ast_visitor.py  copy.sh  copy_enumeration_type.py  init.py  init.sh  jsonutil.py  parcel.py  parse.sh  parse_interface.py  parse_parcel_function.py  parse_raw_structure.py  parse_structure.py  postprocess.sh  readme.md  save_type_map.py  variable_type.py
interface-model-extractor/pre-process/: extract_from_ast.py  gen_all_related_cc1_cmd.py  misc.md  readme.md
interface-model-extractor/pre-process/BinderIface/: BinderIface.cpp  CMakeLists.txt
seed/: media_url_list.txt  package_list.txt  permission_list.txt
service-related-file-collector/: collector.py  readme.md
workdir/service-related-file/: misc_parcel_related_function.txt  special_parcelable_function.txt
(+134 files in other folders)
